<resources>
    <string name="app_name">KaliopeClientesPedidos</string>
    <string name="ONE_COLUMN">ONE_COLUMN</string>
    <string name="TWO_COLUMN">TWO_COLUMN</string>
    <string name="THREE_COLUMN">THREE_COLUMN</string>
    <string name="FOUR_COLUMN">FOUR_COLUMN</string>
    <string name="Ingresa">Ingresa</string>
    <string name="Registrate">Registrate</string>
    <string name="Invitado">Ingresa como Invitado</string>
    <string name="Instrucciones_como_invitado">Si no eres Socio(a) Kaliope podras entrar como invitado y ver todos los productos manejados por Kaliope. Pero no podras realizar pedidos o apartar productos.</string>
    <string name="No_Mostrar_otra_vez">No mostrar otra vez</string>
    <string name="Continuar">Continuar</string>
    <string name="Volver">Volver</string>
    <string name="Usuario">Usuario:</string>
    <string name="Contraseña">Contraseña:</string>
    <string name="Instrucciones_ingresa_socio">Si ya estas registrado en Kaliope como Socio, ingresa tus datos para iniciar sesion:</string>
    <string name="Instrucciones_como_invitado2">si no tienes cuenta puedes ingresar como invitado:</string>
    <string name="MantenerSesion">Mantener sesion iniciada</string>
    <string name="color">Color:</string>
    <string name="talla">Talla:</string>
    <string name="cantidad">Cantidad:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Strings used for fragments for navigation -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="open" translatable="false">open</string>
    <string name="close" translatable="false">close</string>
    <string name="TituloHome">Todos los productos</string>
    <string name="Empresa" translatable="false">Kaliope Mexico S.A de C.V</string>
    <string name="Cuenta">Cuenta:</string>
    <string name="Offline_carrito">La aplicacion no tiene conexion a internet, recomendamos que apuntes el codigo de producto  %1s en una libreta con las tallas y colores que solicito tu cliente para que lo agreges al carrito en cuanto estes en un lugar con conexion a internet</string>
    <string name="sin_internet">Sin conexion a Internet</string>
    <string name="entiendo">Entiendo</string>
    <string name="si_ordenas_ahora">Si ordenas ahora tu pedido llegara el:</string>
    <string name="PrecioPublico">Precio al Publico:</string>
    <string name="Distribucion">Distribución:</string>
    <string name="Ganancia">Ganancia:</string>
    <string name="FormaDePago">Elige tu forma de pago:</string>
    <string name="CreditoKaliope">Crédito Kaliope</string>
    <string name="Inversionista">Inversionista</string>
    <string name="PuntosKaliope">Puntos Kaliope</string>
    <string name="Aviso">Aviso</string>
    <string name="aPrecioDe">A precio de</string>
    <string name="ganaMas">¡Gana mas!</string>
    <string name="Eliminalo">Eliminalo</string>
    <string name="O">ó</string>
    <string name="confirma_producto">Confirma tu producto</string>
    <string name="ver_carrito">Ver mi carrito</string>
    <string name="continuar_eligiendo">Continuar Eligiendo</string>
    <string name="cambiar_metodo_pago">Cambiar metodo de pago</string>
    <string name="instrucciones_inversion">Al ser inversionista pagaras este producto de contado al recibir el pedido, eso te permitira obtener los precios mas bajos con mejores ganancias.\n En este producto aumentaras tu ganancia de:<b> $%1s </b> a <b>$%2s</b> </string>
    <string name="instrucciones_credito">Usaras tu credito Kaliope al recibir tu pedido. \nTu lista de precios es: %1s \nLimite de credito: $%2s<b></b> </string>


    <!--El uso de plurales https://www.develou.com/uso-de-strings-en-android-como-recursos-de-texto/-->
    <plurals name="productosEncontrados">
        <item quantity="one">se encontro %d producto</item>
        <item quantity="other">se encontraron %d productos</item>
    </plurals>


    <string name="confirmar_cambio_inversion">Si, Invertir!</string>
    <string name="cancelar">cancelar</string>
    <string name="confirmar_cambio_credito">Si, pagar a credito</string>
    <string name="titulo_eliminar">Eliminar</string>
    <string name="instrucciones_eliminar">¿Estas seguro que deseas eliminar este producto de tu carrito?</string>
    <string name="limite_credito">Limite Credito: $</string>
    <string name="grado">Grado:</string>
    <string name="dias_credito">Dias Credito:</string>
    <string name="zona">Zona:</string>
    <string name="piezas_totales">Piezas totales:</string>
    <string name="pedido_numero">Pedido numero:</string>
    <string name="fecha_entrega">Fecha de entrega:</string>
    <string name="credito">Credito</string>
    <string name="importe">Importe:</string>
    <string name="inversion">Inversion</string>
    <string name="ganancia_total">Ganancia total:</string>
    <string name="confirmar_enviar_pedido">Confirmar y enviar pedido</string>
    <string name="oh_no">¡Oh no!\nTu carrito aún está vacio</string>
    <string name="pago_seleccionado">Pagara con:</string>
    <string name="agotado">Agotado eliminalo de tu carrito</string>
    <string name="producto_confirmado">Producto Confirmado</string>
    <string name="tienes_hasta_el_para_cerrar_pedido">Tienes hasta el %1s para ingresar productos a tu carrito</string>
    <string name="mi_carrito">Mi Carrito</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
