<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="30dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">


            <TextView
                android:id="@+id/item_container_carrito_totales_cuentaClienteTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4035"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_container_carrito_totales_nombreClienteTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Maria Tereza Mondragon Sanchez"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/item_container_carrito_totales_cuentaClienteTV"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_container_carrito_totales_nombreClienteTV">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grado"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/item_container_carrito_totales_gradoTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vendedora"
                    android:textSize="13sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limite_credito"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/item_container_carrito_totales_limiteCreditoTV"
                app:layout_constraintTop_toTopOf="@+id/item_container_carrito_totales_limiteCreditoTV" />

            <TextView
                android:id="@+id/item_container_carrito_totales_limiteCreditoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="1400"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout7"
                app:layout_constraintTop_toTopOf="@+id/linearLayout7" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/dias_credito"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/linearLayout7"
                app:layout_constraintTop_toTopOf="@+id/linearLayout7" />


            <TextView
                android:id="@+id/item_container_carrito_totales_diasTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="14"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />


            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zona" />

                <TextView
                    android:id="@+id/item_container_carrito_totales_nombreZonaTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zona" />

            </LinearLayout>


            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="5dp"
                android:background="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_container_carrito_totales_numeroPedidoTV" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pedido_numero"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout8"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_entrega"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.35"
                app:layout_constraintStart_toEndOf="@+id/linearLayout8"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

            <TextView
                android:id="@+id/item_container_carrito_totales_numeroPedidoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="1"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/item_container_carrito_totales_fechaEntregaTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="03-02-2021"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/piezas_totales"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />


            <TextView
                android:id="@+id/item_container_carrito_totales_piezasTotalesTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />


            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/cuadro_credito"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toStartOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.86"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_container_carrito_totales_piezasTotalesTV">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credito"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_container_carrito_totales_piezasCreditoTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="2pz" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/importe" />

                <TextView
                    android:id="@+id/item_container_carrito_totales_importeCreditoTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$500" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/cuadro_inversion"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/item_container_carrito_totales_piezasTotalesTV">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inversion"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_container_carrito_totales_piezasInversionTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="2pz" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/importe" />

                <TextView
                    android:id="@+id/item_container_carrito_totales_importeInversionTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$500" />

            </LinearLayout>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ganancia_total"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout9" />

            <TextView
                android:id="@+id/item_container_carrito_totales_gananciaTotalTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$549"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/item_container_carrito_totales_mensajePuntosCortos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="+100 puntos Kaliope"
                android:textColor="@color/colorBlack"
                app:layout_constraintBottom_toBottomOf="@+id/item_container_carrito_totales_gananciaTotalTV"
                app:layout_constraintStart_toEndOf="@+id/item_container_carrito_totales_gananciaTotalTV" />


            <Button
                android:id="@+id/item_container_carrito_totales_confirmarEnviarPedidoButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/boton_redondo_regalo"
                android:padding="5dp"
                android:text="@string/confirmar_enviar_pedido"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_container_carrito_totales_gananciaTotalTV" />

            <TextView
                android:id="@+id/item_container_carrito_totales_mensajeLimiteCreditoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Mensaje de Limite de Credito"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_container_carrito_totales_confirmarEnviarPedidoButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

</LinearLayout>