<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    >



        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:cardCornerRadius="45dp"
            android:elevation="12dp"
            >

        <!--Atento con el app:srcCompat si no usas ese y sin darte cuenta sale el de
        tools:srcCompat la fuking imagen no se muestra cuando lo cargas al movil o al debug-->
        <ImageView
            android:id="@+id/drawer_header_ImagenCliente"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="Foto del cliente"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/icono_background"
            android:adjustViewBounds="true"
            />

        </androidx.cardview.widget.CardView>




<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cuenta"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="11sp"
            />

        <TextView
            android:id="@+id/drawer_header_cuentaCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text=""
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_toEndOf="@+id/textView"
            android:layout_alignParentTop="true"


            />




        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Usuario"
            android:textSize="11sp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            />

        <TextView
            android:id="@+id/drawer_header_usuarioCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_toEndOf="@+id/textView"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignStart="@+id/drawer_header_cuentaCliente"
            />



</RelativeLayout>


        <TextView
            android:id="@+id/drawer_header_nombreCliente"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text=""
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Empresa"
            android:textSize="12sp"
            android:layout_marginTop="2dp"
            />


</LinearLayout>